--- a/app/src/main/res/layout/fragment_audio_book.xml
+++ b/app/src/main/res/layout/fragment_audio_book.xml
@@ -2,7 +2,8 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".audio.AudioBookFragment">
 
     <data>
         <variable
@@ -12,9 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        tools:context=".audio.AudioBookFragment">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/audioBookLayout1"
