--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -124,6 +124,7 @@
                     app:layout_constraintEnd_toEndOf="parent"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/myCelebPoint"
                     android:text="2543K"
                     android:fontFamily="@font/pretendard_medium"
                     android:drawableEnd="@drawable/point"
